--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -7,6 +7,8 @@ processes:
     - <%= p('listen_hostname') %>
     - --listen-port
     - <%= p('listen_port') %>
+    - --log-level
+    - <%= p('log_level') %>
 
     env: []
 
