Add and use TLS certificate
[#150977648]

--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -9,6 +9,10 @@ processes:
     - <%= p('listen_port') %>
     - --log-level
     - <%= p('log_level') %>
+    - --tls-certificate
+    - /var/vcap/jobs/perm/config/certs/tls.crt
+    - --tls-key
+    - /var/vcap/jobs/perm/config/certs/tls.key
 
     env: []
 
