Fix perm-monitor job
[#150979134]

--- a/jobs/perm-monitor/templates/bpm.yml.erb
+++ b/jobs/perm-monitor/templates/bpm.yml.erb
@@ -1,5 +1,5 @@
 processes:
-  perm:
+  perm-monitor:
     executable: /var/vcap/packages/perm-monitor/bin/perm-monitor
 
     args:
@@ -8,7 +8,7 @@ processes:
     - --perm-hostname
     - <%= p('perm.hostname') %>
     - --perm-port
-    - <%= link('perm').p('listening_port')
+    - <%= link('perm').p('listen_port') %>
     - --perm-ca-certificate
     - /var/vcap/jobs/perm-monitor/config/certs/perm_ca.crt
     - --statsd-hostname
