--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -3,6 +3,7 @@ processes:
     executable: /var/vcap/packages/perm/bin/perm
 
     args:
+	  - serve
     - --listen-hostname
     - <%= p('listen_hostname') %>
     - --listen-port
