Add more bpm 0.2.0 changes
Signed-off-by: Chris Hendrix <chendrix@pivotal.io>

--- a/jobs/perm-monitor/templates/bpm.yml.erb
+++ b/jobs/perm-monitor/templates/bpm.yml.erb
@@ -16,13 +16,15 @@ processes:
     - --statsd-port
     - <%= p('statsd.port') %>
 
-    env: []
+    env: {}
 
     limits:
       memory: 256M
       processes: 100
       open_files: 524
 
-    volumes: []
+    additional_volumes: []
 
     hooks: {}
+
+    capabilities: []
