Run migrations in pre-start
[#150979010]

--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -31,3 +31,6 @@ processes:
       memory: 256M
       processes: 100
       open_files: 524
+
+    hooks:
+      pre_start: /var/vcap/jobs/perm/bin/pre-start
