--- a/jobs/perm/templates/pre-start.erb
+++ b/jobs/perm/templates/pre-start.erb
@@ -3,7 +3,7 @@
 set -eu
 
 <% if spec.bootstrap %>
-/var/vcap/jobs/perm/bin/perm migrate \
+/var/vcap/jobs/perm/bin/perm migrate up \
   --log-level <%= p('log_level') %> \
   --sql-db-driver <%= p('sql.db.driver') %> \
   --sql-db-host <%= p('sql.db.host') %> \
