Run migrate before running serve, not in pre-start
Can't run in BOSH pre-start because consul is not up, so you cannot talk
to sql-db.service.cf.internal

Can't run in BPM pre-start because it might take more than 30 seconds to
run

[#150979010]

--- a/jobs/perm/templates/perm.erb
+++ b/jobs/perm/templates/perm.erb
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-set -eu
+set -e
 
 <% if spec.bootstrap %>
 /var/vcap/jobs/perm/bin/perm migrate up \
@@ -12,3 +12,5 @@ set -eu
   --sql-db-username <%= p('sql.db.username') %> \
   --sql-db-password <%= p('sql.db.password') %>
 <% end %>
+
+/var/vcap/packages/perm/bin/perm "$@"
