Allow configuring SQL TLS in bosh release
[#151926117]

--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -26,6 +26,10 @@ processes:
     - <%= p('sql.db.username') %>
     - --sql-db-password
     - <%= p('sql.db.password') %>
+    - --sql-tls-required
+    - <%= p('sql.tls.required') %>
+    - --sql-tls-root-ca
+    - /var/vcap/jobs/perm/config/certs/sql_tls_ca.crt
 
     limits:
       memory: 256M
