--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -30,6 +30,8 @@ processes:
     - <%= p('sql.tls.required') %>
     - --sql-tls-root-ca
     - /var/vcap/jobs/perm/config/certs/sql_tls_ca.crt
+    - --sql-connection-max-lifetime
+    - <%= p('sql.tuning.connection_max_lifetime') %>
 
     limits:
       memory: 256M
