Replace wrapper PID with underlying PID
[Fixes #153487402]

Signed-off-by: Chris Hendrix <chendrix@pivotal.io>

--- a/jobs/perm/templates/perm.erb
+++ b/jobs/perm/templates/perm.erb
@@ -13,4 +13,4 @@ set -e
   --sql-db-password <%= p('sql.db.password') %>
 <% end %>
 
-/var/vcap/packages/perm/bin/perm "$@"
+exec /var/vcap/packages/perm/bin/perm "$@"
