--- a/jobs/perm/templates/perm.erb
+++ b/jobs/perm/templates/perm.erb
@@ -13,7 +13,8 @@ trap "killall -- -$$" SIGINT SIGTERM EXIT
   --sql-db-port <%= p('sql.db.port') %> \
   --sql-db-schema <%= p('sql.db.schema') %> \
   --sql-db-username <%= p('sql.db.username') %> \
-  --sql-db-password <%= p('sql.db.password') %>
+  --sql-db-password <%= p('sql.db.password') %> \
+  --audit-file-path <%= p('audit_file_path') %>
 <% end %>
 
 # exec so that perm receives kill signals from bpm
