use audit file path flag on serve instead of migrate
[#155752733]

Signed-off-by: Jeff Pak <jeffrey.pak@emc.com>

--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -34,6 +34,8 @@ processes:
     - /var/vcap/jobs/perm/config/certs/sql_tls_ca.crt
     - --sql-tuning-connection-max-lifetime
     - <%= p('sql.tuning.connection_max_lifetime') %>
+    - --audit-file-path
+    - <%= p('audit_file_path') %>
 
     limits:
       memory: 256M
