--- a/jobs/perm-monitor/templates/bpm.yml.erb
+++ b/jobs/perm-monitor/templates/bpm.yml.erb
@@ -15,13 +15,9 @@ processes:
     - <%= p('statsd.hostname') %>
     - --statsd-port
     - <%= p('statsd.port') %>
-    - --admin-probe-interval
-    - <%= p('perm.admin_probe_interval') %>
-    - --admin-probe-timeout
-    - <%= p('perm.admin_probe_timeout') %>
-    - --query-probe-interval
+    - --interval
     - <%= p('perm.query_probe_interval') %>
-    - --query-probe-timeout
+    - --timeout
     - <%= p('perm.query_probe_timeout') %>
 
     limits:
