Add request-duration and fix usage of timeout
[Fixes #157093698]

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/jobs/perm-monitor/templates/bpm.yml.erb
+++ b/jobs/perm-monitor/templates/bpm.yml.erb
@@ -17,6 +17,8 @@ processes:
     - <%= p('statsd.port') %>
     - --frequency
     - <%= p('probe.frequency') %>
+    - --request-duration
+    - <%= p('probe.request_duration') %>
     - --timeout
     - <%= p('probe.timeout') %>
 
