--- a/jobs/perm/templates/perm.erb
+++ b/jobs/perm/templates/perm.erb
@@ -8,12 +8,12 @@ trap "killall -- -$$" SIGINT SIGTERM EXIT
 
 /var/vcap/packages/perm/bin/perm migrate up \
   --log-level <%= p('log_level') %> \
-  --sql-db-driver <%= p('sql.db.driver') %> \
-  --sql-db-host <%= p('sql.db.host') %> \
-  --sql-db-port <%= p('sql.db.port') %> \
-  --sql-db-schema <%= p('sql.db.schema') %> \
-  --sql-db-username <%= p('sql.db.username') %> \
-  --sql-db-password <%= p('sql.db.password') %>
+  --db-driver <%= p('sql.db.driver') %> \
+  --db-host <%= p('sql.db.host') %> \
+  --db-port <%= p('sql.db.port') %> \
+  --db-schema <%= p('sql.db.schema') %> \
+  --db-username <%= p('sql.db.username') %> \
+  --db-password <%= p('sql.db.password') %>
 <% end %>
 
 # exec so that perm receives kill signals from bpm
