--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -35,7 +35,7 @@ processes:
     - --db-tuning-connection-max-lifetime
     - <%= p('sql.tuning.connection_max_lifetime') %>
     - --audit-file-path
-    - <%= p('log_audit_events') ? "/var/vcap/sys/log/perm/audit.log" : "/dev/null" %>
+    - <%= p('audit_file_path') %>
 
     limits:
       memory: 256M
