--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -36,6 +36,10 @@ processes:
     - <%= p('sql.tuning.connection_max_lifetime') %>
     - --audit-file-path
     - <%= p('log_audit_events') ? "/var/vcap/sys/log/perm/audit.log" : "/dev/null" %>
+    - --uaa-hostname
+    - <%= p('uaa.hostname') %>
+    - --uaa-port
+    - <%= p('uaa.port') %>
 
     limits:
       memory: 256M
