Add the auth feature flag to the release
[Finishes #157702129]

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -40,6 +40,8 @@ processes:
     - <%= p('uaa.hostname') %>
     - --uaa-port
     - <%= p('uaa.port') %>
+    - --require-auth
+    - <%= p('feature_flags.auth') %>
 
     limits:
       memory: 256M
