--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -36,10 +36,8 @@ processes:
     - <%= p('sql.tuning.connection_max_lifetime') %>
     - --audit-file-path
     - <%= p('log_audit_events') ? "/var/vcap/sys/log/perm/audit.log" : "/dev/null" %>
-    - --uaa-hostname
-    - <%= p('uaa.hostname') %>
-    - --uaa-port
-    - <%= p('uaa.port') %>
+    - --oauth2-url
+    - https://<%= p('uaa.hostname') %>:<%= p('uaa.port') %>
     <% if_p('feature_flags.auth') do |auth| %>
       <% if auth %>
     - --require-auth
