conditionally template auth.ca_cert if provided in manifest
[#157980274]

--- a/jobs/perm-monitor/templates/uaa_ca.crt.erb
+++ b/jobs/perm-monitor/templates/uaa_ca.crt.erb
@@ -1,1 +1,5 @@
-<%= p('auth.ca_cert') %>
+<% if_p('auth.required') do |required| %>
+  <% if required %>
+    <%= p('auth.ca_cert') %>
+  <% end %>
+<% end %>
