add statsd options to perm server
[#157980475]

Signed-off-by: Jeff Pak <jeffrey.pak@emc.com>

--- a/jobs/perm/templates/bpm.yml.erb
+++ b/jobs/perm/templates/bpm.yml.erb
@@ -4,6 +4,10 @@ processes:
 
     args:
     - serve
+    - --statsd-hostname
+    - localhost
+    - --statsd-port
+    - 8125
     - --listen-hostname
     - 0.0.0.0
     - --listen-port
