allow perm-monitor to accept multiple UAA CAs for rotation
[#158847184]

--- a/jobs/perm-monitor/templates/uaa_ca.crt.erb
+++ b/jobs/perm-monitor/templates/uaa_ca.crt.erb
@@ -1,5 +1,3 @@
-<% if_p('auth.required') do |required| %>
-  <% if required %>
-<%= p('auth.ca_cert') %>
-  <% end %>
+<% p("auth.ca_certs", []).each do |ca| %>
+<%= ca %>
 <% end %>
