Use simplified perm monitor flags
Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/jobs/perm-monitor/templates/bpm.yml.erb
+++ b/jobs/perm-monitor/templates/bpm.yml.erb
@@ -5,13 +5,13 @@ processes:
     args:
     - --log-level
     - <%= p('log_level') %>
-    - --perm-hostname
+    - --perm-host
     - <%= p('perm.hostname') %>
     - --perm-port
     - <%= link('perm').p('port') %>
     - --perm-ca-certificate
     - /var/vcap/jobs/perm-monitor/config/certs/perm_ca.crt
-    - --statsd-hostname
+    - --statsd-host
     - <%= p('statsd.hostname') %>
     - --statsd-port
     - <%= p('statsd.port') %>
@@ -32,7 +32,7 @@ processes:
     - <%= p('auth.client_secret') %>
     - --perm-token-url
     - https://<%= p('auth.hostname') %>:<%= p('auth.port') %>/oauth/token
-    - --perm-ca-certificate
+    - --perm-oauth2-ca
     - /var/vcap/jobs/perm-monitor/config/certs/uaa_ca.crt
       <% end %>
     <% end %>
